--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="buttons">
             <button id="copy">COPIAR</button>
             <button id="share">COMPARTILHAR</button>
-            <button id="reflection">VER REFLEXÃO</button>
+            <button>INSTAGRAM</button>
         </div>
         
         <footer style="margin-top: 100px; font-size: 1.5rem; text-align: center; color: #000000;"></footer>
