--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         <div class="buttons">
             <button id="copy">COPIAR</button>
             <button id="share">COMPARTILHAR</button>
-            <button>INSTAGRAM</button>
+            <a href="https://www.instagram.com/adbarcelona_/"><button>INSTAGRAM</button></a>
+        
         </div>
         
         <footer style="margin-top: 100px; font-size: 1.5rem; text-align: center; color: #000000;"></footer>
