--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         
         <footer style="margin-top: 100px; font-size: 1.5rem; text-align: center; color: #000000;"></footer>
-            <img src="ADB Logo.png" alt="ADB Logo" class="logo" id="churchLogo"> 
+            <img src="ADB Logo" alt="ADB Logo" class="logo" id="churchLogo"> 
             <!-- Parte que deve ser personalizada -->
         <footer class="church-info" style="margin-top: 0px; font-size: 1.1rem; text-align: center; color: #ffffff;">
         	<!-- Adicione abaixo o nome da sua igreja -->
